@@ -12,8 +12,9 @@ auth_tkt.secret = REPLACEME
 auth_tkt.cookie_name = factored
 auth_tkt.secure = false
 auth_tkt.include_ip = true
-auth_tkt.timeout = 7200
-auth_tkt.reissue_time = 1234
+
+auth_timeout = 7200
+auth_remember_timeout = 86400
 
 base_auth_url = /auth
 supported_auth_schemes = 
